--- a/mysite/Gemfile
+++ b/mysite/Gemfile
@@ -17,7 +17,7 @@ source "https://rubygems.org"
 gem "github-pages", group: :jekyll_plugins
 # If you have any plugins, put them here!
 group :jekyll_plugins do
-  gem "jekyll-feed", "~> 0.2.3"
+  gem "jekyll-feed", "~> 0.3.1"
 end
 
 # Windows and JRuby does not include zoneinfo files, so bundle the tzinfo-data gem
@@ -32,3 +32,12 @@ gem "wdm", "~> 0.1.1", :platforms => [:mingw, :x64_mingw, :mswin]
 
 
 gem "webrick", "~> 1.7"
+gem 'jekyll-sass-converter', "~> 1.3"
+gem 'public_suffix', "~> 1.4"
+gem 'html-pipeline', "~> 1.9"
+gem 'kramdown', "~> 1.5.0"
+gem 'liquid', "~> 2.6.1"
+gem 'redcarpet', "~> 3.1"
+
+
+
