--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Computer Science and Mathematics that I find interesting.
 
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "KelleClark.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 social_links:
   twitter_username: kclarkcode
