--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   A journey, complete with unexpected side-trips, into topics in 
   Computer Science and Mathematics that I find interesting.
 
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "KelleClark.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+#baseurl: "" # the subpath of your site, e.g. /blog
+#url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 social_links:
   twitter_username: kclarkcode
