--- a/_config.yml
+++ b/_config.yml
@@ -35,9 +35,9 @@ minima:
   date_format: "%b %d, %Y"
 
 social_links:
-  twitter_username: kclarkcode
-  github_username:  KelleClark
-  linkedIn_username: kelle-clark-b31731176
+  twitter: https://twitter.com/KClarkCode
+  github:  https://github.com/KelleClark
+  linkedIn: https://www.linkedin.com/in/kelle-clark-b31731176/
 
 # Build settings
 markdown: kramdown
