changing the look again :)

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,4 +1,4 @@
 zero:
  iframe: 0V08M1NcdJQ
- t1: "The Extrodinary Things Hubble Has Seen: <br> Hubble's 100 Greatest Images"
- t2: 
+ t1: "The Extrodinary Things Hubble Has Seen:"
+ t2: "Hubble's 100 Greatest Images"
