--- a/_config.yml
+++ b/_config.yml
@@ -18,14 +18,14 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: kelleclark/Exploring_CS_and_Math
+title: Kelle Clark
 email: clarkke20@students.ecu.edu
 description: >- # this means to ignore newlines until "baseurl:"
   A journey, complete with unexpected side-trips, into topics in 
   Computer Science and Mathematics that I find interesting.
 
 #baseurl: "" # the subpath of your site, e.g. /blog
-#url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "0.0.0.0:4000" # the base hostname & protocol for your site, e.g. http://example.com
 
 show_excerpts: false # set to true to show excerpts on the homepage
 
