--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Computer Science and Mathematics that I find interesting.
 
 #baseurl: "" # the subpath of your site, e.g. /blog
-url: "0.0.0.0:4000" # the base hostname & protocol for your site, e.g. http://example.com
+#url: "0.0.0.0:4000" # the base hostname & protocol for your site, e.g. http://example.com
 
 show_excerpts: false # set to true to show excerpts on the homepage
 
